--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.2",
     "modern-normalize": "^2.0.0",
     "mongoose": "^8.1.0",
     "next": "14.0.4",
