--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next-redux-wrapper": "^8.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
     "react-toastify": "^10.0.3",
     "redux-persist": "^6.0.0",
